grafana/02-grafana-ns_sa.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: grafana
  labels:
    app.kubernetes.io/component: grafana
