grafana/04-grafana-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: grafana
  labels:
    app: grafana
    #app.kubernetes.io/name: $APP_INSTANCE_NAME
    app.kubernetes.io/component: grafana
    k8s-app: grafana
spec:
  selector:
    matchLabels: *Labels
  template:
    metadata:
      labels: *Labels
    spec:
      securityContext:
        #fsGroup: 472
        fsGroup: 2002
        supplementalGroups:
        - 0    
      containers:
        - name: grafana
          image: grafana/grafana:latest
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 3000
            name: grafana-http
            protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /robots.txt
              port: 3000
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 2
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 3000
            timeoutSeconds: 1            
          resources:
            requests:
              cpu: 250m
              memory: 750Mi
          volumeMounts:
          - name: config
            mountPath: "/etc/grafana/"
          - name: datasources
            mountPath: "/etc/grafana/provisioning/datasources/"
          - name: dashboardproviders
            mountPath: "/etc/grafana/provisioning/dashboards/"
          - name: dashboards
            mountPath: "/var/lib/grafana/dashboards"
          - name: grafana-data
          - mountPath: "/var/lib/grafana"
      volumes:
      - name: config
        configMap:
          name: grafana-config
      - name: datasources
        configMap:
          name: grafana-datasources
      - name: dashboardproviders
        configMap:
          name: grafana-dashboardproviders
      - name: dashboards
        configMap:
          name: grafana-dashboards
      - name: grafana-data
        persistentVolumeClaim:
          claimName: grafana-data
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: grafana
  labels:
    #app.kubernetes.io/name: $APP_INSTANCE_NAME
    app.kubernetes.io/component: grafana
    k8s-app: grafana
spec:
  selector:
    app: grafana
  ports:
  - port: 3000
    protocol: TCP
    targetPort: grafana-http
  #externalTrafficPolicy: Local
  sessionAffinity: ClientIP
  #type: LoadBalancer
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: grafana
  annotations:
spec:
  ingressClassName: nginx
  rules:
  - host: grafana.cluster.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 3000
---
