grafana/05-grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: grafana
  labels:
    app.kubernetes.io/component: grafana
    app.kubernetes.io/part-of: monitoring-system
  annotations:
    #cert-manager.io/cluster-issuer: "letsencrypt-prd"
    #cert-manager.io/cluster-issuer: "selfsigned-issuer
    acme.cert-manager.io/http01-edit-in-place: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - grafana.grafana.svc
    secretName: grafana-tls
  rules:
  - host: grafana.grafana.svc.cluster.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 3000
---
