grafana/05-grafana-istio.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: grafana-gw
  namespace: grafana
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http-grafana
      protocol: HTTP
    hosts:
    - "grafana.app.cluster.local"
  - port:
      number: 443
      name: https-grafana
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: grafana-tls
    hosts:
    - "grafana.app.cluster.local"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: grafana
  namespace: grafana
spec:
  hosts:
  - "grafana.app.cluster.local"
  gateways:
  - grafana-gw
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: grafana.grafana.svc.cluster.local
        port:
          number: 3000
---
